# matrix

./: README.md  pyproject.toml
src/matrix/: __init__.py
tests/: test_matrix.py  test_row.py
