[project]
name = "matrix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stephen Funk", email = "stephenlfunk@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
